fix create content overlap nav

--- a/sass/nav.scss
+++ b/sass/nav.scss
@@ -13,6 +13,7 @@ nav {
   justify-content: space-between;
   align-items: center;
   position: fixed;
+  z-index: 10;
 }
 
 nav {
